--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "marked": "^16.3.0",
+    "openai": "^6.6.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.2"
   },
