--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "docx": "^9.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "kuromoji": "^0.1.2",
     "marked": "^16.3.0",
     "openai": "^6.6.0",
     "pdf-parse": "^1.1.1",
