--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
-    "chromadb": "^3.0.17",
+    "chromadb": "^3.1.0",
     "cors": "^2.8.5",
     "docx": "^9.5.1",
     "dotenv": "^16.3.1",
@@ -35,7 +35,8 @@
     "marked": "^16.3.0",
     "openai": "^6.6.0",
     "pdf-parse": "^1.1.1",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "kuromoji": "^0.1.2"  
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
