--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "openai": "^6.6.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.2",
-    "kuromoji": "^0.1.2"  
+    "puppeteer": "^21.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
